--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.1",
     "reactotron-react-native": "^3.6.4"
   },
   "devDependencies": {
